# ternary-boost

./: .gitignore  README.md  TODO.md  pyproject.toml  run_pipeline.py
chat/: pyproject.toml
chat/src/chat/: __init__.py  cli.py  config.py  conversation.py  model_loader.py
configs/: pipeline_config.yaml
eval/: pyproject.toml
eval/src/eval/: __init__.py  benchmarks.py  export_bitnet.py
notebooks/: ablation_study.ipynb  colab_demo.ipynb
paretoq/: pyproject.toml
paretoq/src/paretoq/: __init__.py  qat_trainer.py  utils_quant.py  zo_optim.py
pt_bitnet/: pyproject.toml
pt_bitnet/src/pt_bitnet/: __init__.py  export.py  hybrid_runtime.py  int2_packing.py  lora.py  quantize.py  ste.py  subln.py  ternary_linear.py
research/: PLAN.md  pipeline_improvements.md  ternary_lora_inference_plan.md
results/: baselines.md  history.md  phi2_ternary.md
scripts/: colab_ablate.py  colab_export_test.py  colab_final.py  colab_test.py  download_data.py  warmup_subln.py
scripts/baselines/: run_baselines.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  checkpoint.py  data.py  logging.py
tequila/: pyproject.toml
tequila/src/tequila/: __init__.py  ultraquant.py
tests/: conftest.py  test_export.py  test_int2_packing.py  test_paretoq.py  test_pt_bitnet.py  test_tequila.py  test_ternary_linear.py
