[project]
name = "ternary-boost"
version = "0.1.0"
description = "Hybrid LLM compression pipeline: PT-BitNet + ParetoQ + ZeroQAT + Tequila"
requires-python = ">=3.10"
dependencies = [
    "wandb>=0.16.0",
    "matplotlib>=3.7.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "lm-eval>=0.4.0",
    "rich>=13.0.0",
    "ternary-boost-chat",
    "ternary-boost-shared",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = [
    "pt_bitnet",
    "paretoq",
    "tequila",
    "eval",
    "shared",
    "chat",
]

[tool.uv.sources]
ternary-boost-shared = { workspace = true }
ternary-boost-chat = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
