[project]
name = "pt-bitnet"
version = "0.1.0"
description = "Post-Training BitNet quantization: two-stage distribution transformation and block-wise optimization"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "ternary-boost-shared",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
